<resources>
    <string name="app_name">JointSeminarMelon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--general-->
    <string name="registration">등록</string>
    <string name="num_of_people">%d명</string>
    <string name="format_time">%d시간 전</string>
    <string name="format_comment">댓글 %d</string>

    <!-- Navigation -->
    <string name="tab_home">홈</string>
    <string name="tab_chart">차트</string>
    <string name="tab_live">라이브</string>
    <string name="tab_search">검색</string>
    <string name="tab_storage">저장소</string>

    <!--home-->
    <string name="favourite_music">내가 좋아할 음악</string>
    <string name="new_music">최신음악</string>
    <string name="top3">TOP3</string>

    <!-- Album -->
    <string name="album_title">TITLE</string>
    <string name="album_select_all">전체선택</string>
    <string name="album_play_all">전체재생</string>
    <string name="album_introduction">앨범 소개</string>
    <string name="album_view_all">전체보기</string>

    <!-- 글쓰기 -->
    <string name="writing_title">글쓰기</string>
    <string name="writing_hint">24시간 이내 스트리밍 감상한 곡에 한하여 작성하신 댓글에 감상 여부가 표기 됩니다.\n감상 후 24시간이 지난 경우, 또는 내부 서비스 환경에 따라 감상 여부의 표기가 안될 수 있습니다.</string>
    <string name="writing_max_count">&#160;/ 1000</string>
</resources>