<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="org.sopt.jointseminar.melon.presentation.posting.PostingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_900"
        tools:context=".presentation.posting.PostingActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:fontFamily="@font/pretendard_sb"
                android:text="@string/writing_title"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_info"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_title"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@+id/tv_title"
                app:layout_constraintTop_toTopOf="@+id/tv_title"
                app:srcCompat="@drawable/ic_info" />

            <TextView
                android:id="@+id/tv_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="@font/pretendard_r"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp"
                android:text="@string/registration"
                android:textColor="@color/gray_500"
                android:textSize="16sp"
                android:clickable="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_line_top"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_800"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_top" />

        <EditText
            android:id="@+id/et_review"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="33dp"
            android:background="@null"
            android:fontFamily="@font/pretendard_r"
            android:gravity="top|left"
            android:text="@={viewModel.review}"
            android:hint="@string/writing_hint"
            android:includeFontPadding="false"
            android:inputType="textMultiLine"
            android:textColor="@color/white"
            android:textColorHint="@color/gray_500"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_max_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_line_top" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/iv_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_wrt_music" />

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_music"
                app:layout_constraintStart_toEndOf="@+id/iv_music"
                app:layout_constraintTop_toTopOf="@+id/iv_music"
                app:srcCompat="@drawable/ic_wrt_image" />

            <ImageView
                android:id="@+id/iv_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_image"
                app:layout_constraintStart_toEndOf="@+id/iv_image"
                app:layout_constraintTop_toTopOf="@+id/iv_image"
                app:srcCompat="@drawable/ic_wrt_video" />

            <ImageView
                android:id="@+id/iv_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_video"
                app:layout_constraintStart_toEndOf="@+id/iv_video"
                app:layout_constraintTop_toTopOf="@+id/iv_video"
                app:srcCompat="@drawable/ic_wrt_link" />

            <ImageView
                android:id="@+id/iv_emoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_link"
                app:layout_constraintStart_toEndOf="@+id/iv_link"
                app:layout_constraintTop_toTopOf="@+id/iv_link"
                app:srcCompat="@drawable/ic_wrt_emoji" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_line_bottom"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/gray_800"
            app:layout_constraintBottom_toTopOf="@id/layout_bottom"
            app:layout_constraintEnd_toEndOf="@id/tv_max_count"
            app:layout_constraintStart_toStartOf="@id/et_review" />

        <TextView
            android:id="@+id/tv_max_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="14dp"
            android:text="@string/writing_max_count"
            android:textColor="@color/gray_500"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_line_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_goneMarginBottom="10dp" />

        <TextView
            android:id="@+id/tv_text_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.countString}"
            android:textSize="11sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tv_max_count"
            app:layout_constraintEnd_toStartOf="@+id/tv_max_count"
            app:layout_constraintTop_toTopOf="@+id/tv_max_count" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>