<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_900"
    tools:context=".presentation.main.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="2dp"
            android:src="@drawable/ic_home_melon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_ticket"
            app:layout_constraintBottom_toBottomOf="@+id/iv_menu"
            app:layout_constraintEnd_toStartOf="@+id/iv_menu"
            app:layout_constraintTop_toTopOf="@+id/iv_menu" />

        <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_top">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_new_music"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/tv_new_music"
                tools:itemCount="5"
                tools:listitem="@layout/item_home_new" />

            <TextView
                android:id="@+id/tv_favourite_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/pretendard_r"
                android:text="@string/favourite_music"
                android:textColor="@color/white"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_banner"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="54dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                app:layout_constraintDimensionRatio="2.483"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_favourite_music" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_favourite_music"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/tv_favourite_music"
                tools:listitem="@layout/item_home_favourite">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_new_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/new_music"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vp_banner" />

            <TextView
                android:id="@+id/tv_top_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top3"
                android:fontFamily="@font/pretendard_sb"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_new_music"
                />

            <TextView
                android:id="@+id/tv_whole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="전체보기"
                android:fontFamily="@font/pretendard_m"
                android:textSize="14sp"
                android:textColor="@color/gray_500"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_top_three"
                app:layout_constraintBottom_toBottomOf="@id/tv_top_three"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_rank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rectangle_radius_6"
                android:backgroundTint="@color/red_600"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_top_three">

                <ImageView
                    android:id="@+id/iv_album_cover"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/rectangle_radius_6"
                    android:clipToOutline="true"
                    android:src="@drawable/img_love_dive"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.154" />

                <TextView
                    android:id="@+id/tv_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/pretendard_m"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/tv_line"
                    app:layout_constraintStart_toEndOf="@id/iv_album_cover"
                    app:layout_constraintTop_toTopOf="@id/iv_album_cover"
                    android:text="1" />

                <TextView
                    android:id="@+id/tv_line"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="11dp"
                    android:background="@color/white"
                    app:layout_constraintBottom_toBottomOf="@id/iv_album_cover"
                    app:layout_constraintEnd_toEndOf="@+id/tv_rank"
                    app:layout_constraintStart_toStartOf="@id/tv_rank"
                    app:layout_constraintTop_toBottomOf="@id/tv_rank" />

                <TextView
                    android:id="@+id/tv_song"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:fontFamily="@font/pretendard_m"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_rank"
                    app:layout_constraintStart_toEndOf="@+id/tv_rank"
                    app:layout_constraintTop_toTopOf="@+id/tv_rank"
                    android:text="Love dive" />

                <TextView
                    android:id="@+id/tv_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/pretendard_m"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_line"
                    app:layout_constraintStart_toEndOf="@+id/tv_line"
                    app:layout_constraintTop_toTopOf="@+id/tv_line"
                    android:text="아이브" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_melon_trendy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="멜론트랜디  50"
                android:fontFamily="@font/pretendard_sb"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@id/layout_rank"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_melon_trendy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="40dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_melon_trendy"
                tools:listitem="@layout/item_melon_trendy"
                tools:itemCount="4"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>